--- a/src/theme/pages/_index.scss
+++ b/src/theme/pages/_index.scss
@@ -1,5 +1,5 @@
-@forward 'boost';
-@forward 'discovery';
-@forward 'friends';
-@forward 'library';
-@forward 'nitro';
+@forward "boost";
+@forward "discovery";
+@forward "friends";
+@forward "library";
+@forward "nitro";
