--- a/src/theme/app/settings/_index.scss
+++ b/src/theme/app/settings/_index.scss
@@ -1,4 +1,4 @@
-@forward 'channels';
-@forward 'guild';
-@forward 'settings';
-@forward 'user';
+@forward "channels";
+@forward "guild";
+@forward "settings";
+@forward "user";
