--- a/src/theme/modals/_index.scss
+++ b/src/theme/modals/_index.scss
@@ -1,3 +1,3 @@
-@forward 'keyboard-combos';
-@forward 'modals';
-@forward 'server';
+@forward "keyboard-combos";
+@forward "modals";
+@forward "server";
