--- a/src/theme/popouts/_index.scss
+++ b/src/theme/popouts/_index.scss
@@ -1,7 +1,7 @@
-@forward 'auto-complete';
-@forward 'content-wrapper';
-@forward 'inbox';
-@forward 'pinned';
-@forward 'popouts';
-@forward 'search';
-@forward 'user-info';
+@forward "auto-complete";
+@forward "content-wrapper";
+@forward "inbox";
+@forward "pinned";
+@forward "popouts";
+@forward "search";
+@forward "user-info";
