--- a/src/theme/sidebar/_user-area.scss
+++ b/src/theme/sidebar/_user-area.scss
@@ -1,3 +1,7 @@
 #app-mount .panels-3wFtMD {
   background-color: var(--background-primary);
 }
+
+#app-mount .container-YkUktl {
+  background-color: var(--background-primary);
+}
