--- a/src/theme/sidebar/_user-area.scss
+++ b/src/theme/sidebar/_user-area.scss
@@ -5,3 +5,7 @@
 #app-mount .container-YkUktl {
   background-color: var(--background-primary);
 }
+
+#app-mount .container-1zzFcN {
+  background-color: var(--background-primary);
+}
