--- a/src/theme/popouts/_user-info.scss
+++ b/src/theme/popouts/_user-info.scss
@@ -12,3 +12,23 @@
     background-color: var(--background-secondary);
   }
 }
+
+//Modern role icons
+.roleCircle-3K9O3d {
+  border-radius: 0%;
+  width: 1px;
+  height: 10px;
+  padding: 0;
+  margin: 0 4px;
+}
+.role-2TIOKu {
+  font-size: 12px;
+  font-weight: 500;
+  background: var(--background-secondary-alt);
+  border-radius: 0px;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  height: 22px;
+  margin: 0 4px 4px 0;
+  padding: 4px;
+}
