--- a/src/theme/sidebar/_memberlist.scss
+++ b/src/theme/sidebar/_memberlist.scss
@@ -16,7 +16,6 @@
 }
 
 // Smooth minimize
-
 [class*="membersWrap-"] {
   min-width: 0 !important;
 }
@@ -26,4 +25,28 @@
 }
 [class*="membersWrap-"]:hover [class*="members-"] {
   width: 240px !important;
+}
+
+//Sticky role name
+[class*="members"]::before {
+  content: "";
+  position: sticky;
+  display: block;
+  top: 0px;
+  height: 35px;
+  margin-top: -40px;
+  margin-bottom: 10px;
+  background: inherit;
+  box-shadow: var(--elevation-medium);
+  z-index: 2;
+}
+[class*="membersGroup"] {
+  position: sticky;
+  top: -8px;
+  padding-top: 0;
+  padding-bottom: 4px !important;
+  background-color: inherit;
+  z-index: 3;
+  display: flex;
+  align-items: flex-end;
 }
